--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <i class="fas fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>Hi, My name is <span>Rahul Singh Rana</span> <br>and I'm Front-End Web Developer.</p>
+                <p>My name is <span>Rahul Singh Rana</span> <br>and I'm Full Stack Web Developer.</p>
             </div>
         </div>
     </div>
@@ -38,9 +38,7 @@
                 <div class="about-col-1">
                     <h1 class="sub-titles">About Me</h1>
                     <div class="para">
-                        <p>I am a Front-End Web Developer. I can provide clean code and pixel perfect design. I also make the website more & more
-                            interactive with web animations. A responsive design makes your website asscessible to all users, regardless of their device.
-                        </p>
+                        <p>I am a Full Stack Web Developer, I deliver clean code and pixel-perfect designs, creating visually appealing and highly interactive websites. I ensure responsive designs for seamless access across all devices, utilizing web animations to enhance user engagement. Let's build a robust, scalable, and secure website that exceeds your expectations and elevates your online presence. </p>
                             <div class="tab-titles">
                                 <p class="tab-links active-link" onclick="opentab('education')">Education</p>
                                 <p class="tab-links" onclick="opentab('skills')">Skills</p>
@@ -48,16 +46,17 @@
                             </div>
                             <div class="tab-contents active-tab" id="education">
                                 <ul>
-                                    <li><span>2019-2023</span><br>B.Tech from Amrapali Group of Institute</li>
+                                    <li><span>2019-2023</span><br>B.Tech from Amrapali Institute of Technology and Science (Haldwani)</li>
                                 <li><span>2018-2019</span><br>Intermediate from Uttarakhand Board</li>
                                 <li><span>2016-2017</span><br>High School from Uttarakhand Board</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="skills">
                             <ul>
-                                <li><span>Front End Web Development</span><br>HTML, CSS and JavaScript</li>
+                                <li><span>Front-End Web Development</span><br>HTML, CSS, JavaScript and ReactJS</li>
+                                <li><span>Back-End Web Development</span><br>NodeJS, ExpressJS and PHP</li>
                                 <li><span>Programming Language</span><br>Java</li>
-                                <li><span>Database</span><br>MySql</li>
+                                <li><span>Database</span><br>MySql and MonogoDB</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="certificates">
@@ -86,8 +85,8 @@
                             
                     </div>
                     <div>
-                        <i class="fa-solid fa-pen-to-square"></i>
-                        <h2>Graphic Design</h2>
+                        <i class="fa-sharp fa-solid fa-link"></i>
+                        <h2>Front End Web Developer</h2>
                         <p>I am a professional graphic designer with 2 years of experience. I complete my projects with customer satisfaction. 
                             I only provide quality work and I sure that customer 
                             satisfaction depends on the quality.</p>
@@ -95,7 +94,7 @@
                         </div>
                         <div>
                             <i class="fa-sharp fa-solid fa-link"></i>
-                            <h2>Web Design</h2>
+                            <h2>Full Stack Web Developer</h2>
                             <p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly,
                                 it needs to be fast as possible.
                             </p>
@@ -125,7 +124,7 @@
                     <h3>College Library Web Page</h3>
                     <p>The web connect to the our collage studens and Library Management.
                     </p>
-                    <a href="https://rahulsrana2636.github.io/Book-Library/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://book-library-management-ochre.vercel.app/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -154,7 +153,7 @@
                     <a href="https://www.instagram.com/im__rahul_11/" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/rahul-singh-rana-b19b841a8/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 </div>
-                <a href="Image/RAHUL SINGH RANA.resume.pdf" download class="btn btn2">Download CV</a>
+                <a href="Image/Rahul_Singh_Rana.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet" >
